update resources and docs
